--- a/guide/_workshop.yml
+++ b/guide/_workshop.yml
@@ -11,6 +11,9 @@ vars:
   OPENSHIFT_USER: userX
   OPENSHIFT_PASSWORD: PASSWORD
   PROJECT: asl-projectX
+  CODEREADY_WORKSPACES_URL: http://che-eclipse-che.apps.192.168.99.100.nip.io
+  VAULT_URL: https://vault-vault.apps.192.168.99.100.nip.io
+  KIALI_URL: http://kiali-istio-system.apps.192.168.99.100.nip.io
 
 modules:
   activate:
