--- a/labs/fruits-catalog/pom.xml
+++ b/labs/fruits-catalog/pom.xml
@@ -51,6 +51,13 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+      <groupId>org.keycloak.bom</groupId>
+      <artifactId>keycloak-adapter-bom</artifactId>
+      <version>9.0.3.redhat-00002</version>
+      <type>pom</type>
+      <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>${spring-boot.version}</version>
@@ -154,6 +161,10 @@
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    <groupId>org.keycloak</groupId>
+    <artifactId>keycloak-spring-boot-starter</artifactId>
     </dependency>
   </dependencies>
   <build>
