--- a/labs/fruits-catalog/src/main/webapp/package.json
+++ b/labs/fruits-catalog/src/main/webapp/package.json
@@ -29,7 +29,8 @@
     "ngx-bootstrap": "^3.0.1",
     "ngx-highlightjs": "^2.1.4",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "keycloak-connect": "file:keycloak-connect-4.8.18.Final-redhat-00001.tgz"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
